rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-color3values__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed

---
- referent: referent-0
  name: Value
  class: Color3Value
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      BinaryString: ""
    Value:
      Color3:
        - 0.0
        - 0.3137255
        - 0.49803922
  children: []
- referent: referent-1
  name: Value
  class: Color3Value
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      BinaryString: ""
    Value:
      Color3:
        - 1.0
        - 0.70588237
        - 0.078431375
  children: []
- referent: referent-2
  name: Value
  class: Color3Value
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      BinaryString: ""
    Value:
      Color3:
        - 2.0078433
        - 1.0196079
        - 0.039215688
  children: []

